removed redundant code and refactored

--- a/public/visitor.html
+++ b/public/visitor.html
@@ -14,7 +14,7 @@
         <button id="send">Send</button>
         <p id="response_message"></p>
     </div>
-    <script src="client.js">
+    <script src="visitor.js">
     </script>
 </body>
 
